# snake-game

./: CMakeLists.txt  Makefile  README.md  entry.desktop.in
src/: game.c  game.h  icon_data.h  main.c
